--- a/jeep-demo/index.html
+++ b/jeep-demo/index.html
@@ -90,7 +90,7 @@
   <!-- <div id="content"></div> -->
 </div>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/jeep-demo-client.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
