--- a/jeep-demo/index.html
+++ b/jeep-demo/index.html
@@ -90,7 +90,8 @@
   <!-- <div id="content"></div> -->
 </div>
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.min.js"></script> -->
+<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/jeep-demo-client.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
