Modification of image maps

--- a/jeep-demo/index.html
+++ b/jeep-demo/index.html
@@ -38,13 +38,18 @@
       <area class="keypad_digit" id="6" target="" alt="digit_6" title="Key 6" href="" coords="915,195,934,212" shape="rect">
       <area class="keypad_digit" id="7" target="" alt="digit_7" title="Key 7" href="" coords="944,192,962,208" shape="rect">
       <area class="keypad_digit" id="8" target="" alt="digit_8" title="Key 8" href="" coords="973,188,995,208" shape="rect">
-      <area class="busBCAN" target="" alt="Mirror ECU" title="Mirror ECU" href="" coords="81,13,197,175" shape="rect">
-      <area class="busLIN"  target="" alt="Window-Door ECU" title="Window-Door" href="" coords="49,421,200,525" shape="rect">
-      <area class="busCCAN" target="" alt="OBD Port" title="OBD Port" href="" coords="268,417,383,526" shape="rect">
-      <area class="busCCAN" target="" alt="Gearbox ECU" title="Gearbox ECU" href="" coords="866,461,1006,587" shape="rect">
-      <area class="busLIN"  target="" alt="Seat ECU" title="Seat ECU" href="" coords="1518,502,1299,653" shape="rect">
+      <!-- <area class="busBCAN" target="" alt="Driver Door" title="Driver Door" href="" coords="81,13,197,175" shape="rect"> -->
+      <area class="busBCAN" target="" alt="Driver Door" title="Driver Door" href="" coords="13,195,222,355"  shape="rect">
+      <area class="busLIN"  target="" alt="Door Switches" title="Door Switches" href="" coords="49,421,200,525" shape="rect">
+      <!-- <area class="busCCAN" target="" alt="OBD Port (CCAN)" title="OBD Port (CCAN)" href="" coords="268,417,383,526" shape="rect"> -->
+      <area class="busCCAN" target="" alt="Gearbox Shift" title="Gearbox Shift" href="" coords="866,461,1006,587" shape="rect">
+      <area class="busLIN"  target="" alt="Seat Module" title="Seat Module" href="" coords="1518,502,1299,653" shape="rect">
       <area class="busBCAN" target="" alt="Headunit" title="Headunit" href="" coords="863,279,1013,351" shape="rect">
-      <area class="busCCAN" target="" alt="Steering ECU" title="Steering ECU" href="" coords="457,180,647,334" shape="rect">
+      <!-- <area class="busLIN" target="" alt="Steering Controls" title="Steering Controls" href="" coords="457,180,647,334" shape="rect"> -->
+      <area class="busCCAN" target="" alt="OBD Port (CCAN)" title="OBD Port (CCAN)" href="" coords="348,528,287,438" shape="rect">
+      <area class="busBCAN" target="" alt="OBD Port (BCAN)" title="OBD Port (BCAN)" href="" coords="360,441,421,528" shape="rect">
+      <area class="busCCAN" target="" alt="Steering Column" title="Steering Column" href="" coords="511,275,613,484" shape="rect">
+      <area class="busLIN" target="" alt="Steering Switches" title="Steering Switches" href="" coords="371,237,444,306" shape="rect">
     </map>
     <div id="jeep-img-container">
       <div id="disp-dig-status"></div>
