--- a/jeep-demo/index.html
+++ b/jeep-demo/index.html
@@ -74,6 +74,7 @@
 
 <div class="logwin" id="sidelogwin">
   <input type="hidden" id="logbus" value="">
+  <div id="wintitle">&nbsp;</div>
   <a href="javascript:void(0)" id="closebtn" onclick="closeNav()">&times;</a>
 
   <table>
